--- a/app/views/public/orders/comfirm.html.erb
+++ b/app/views/public/orders/comfirm.html.erb
@@ -57,7 +57,7 @@
       </li>
     </ul>
     <div class="row">
-      <%= form_with model: @order, url: orders_path, method: :post, local: true do |f|%>
+      <%= form_with model: @order, url: orders_path, method: :post do |f|%>
         <%= f.hidden_field :postage, :value => "800" %>
         <%= f.hidden_field :total_payment, :value => @total %>
         <%= f.hidden_field :payment_method %>
